@@ -5,14 +5,11 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import uk.gov.hmcts.darts.common.entity.ExternalObjectDirectoryEntity;
-import uk.gov.hmcts.darts.common.repository.EntityIdOnly;
 import uk.gov.hmcts.darts.common.repository.ExternalLocationTypeRepository;
 import uk.gov.hmcts.darts.common.repository.ExternalObjectDirectoryRepository;
 import uk.gov.hmcts.darts.common.repository.ObjectRecordStatusRepository;
 import uk.gov.hmcts.darts.datamanagement.service.impl.InboundToUnstructuredProcessorImpl;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -31,8 +28,6 @@ class InboundToUnstructuredProcessorImplTest {
     ExternalLocationTypeRepository externalLocationTypeRepository;
     InboundToUnstructuredProcessor inboundToUnstructuredProcessor;
     @Mock
-    EntityIdOnly externalObjectDirectoryId;
-    @Mock
     InboundToUnstructuredProcessorSingleElement singleElementProcessor;
 
     @BeforeEach
@@ -45,23 +40,18 @@ class InboundToUnstructuredProcessorImplTest {
     @Test
     void testContinuesProcessingNextIterationOnException() {
         // given
-        List<ExternalObjectDirectoryEntity> emptyUnstructuredStored = Collections.emptyList();
-            List<ExternalObjectDirectoryEntity> emptyUnstructuredFailed = Collections.emptyList();
-        when(externalObjectDirectoryRepository.findByStatusAndExternalLocationType(any(), any()))
-            .thenReturn(List.of(externalObjectDirectoryId, externalObjectDirectoryId));
-        when(externalObjectDirectoryRepository.findByStatusAndType(any(), any()))
-            .thenReturn(emptyUnstructuredStored);
-        when(externalObjectDirectoryRepository.findByStatusIdInAndType(any(), any()))
-            .thenReturn(emptyUnstructuredFailed);
+        when(externalObjectDirectoryRepository.findEodIdsForTransfer(any(), any(), any(), any(), any(), any()))
+            .thenReturn(List.of(1, 2));
+
         doThrow(new RuntimeException("some exception"))
             .doNothing()
-            .when(singleElementProcessor).processSingleElement(any(), any(), any());
+            .when(singleElementProcessor).processSingleElement(any());
 
         // when
         inboundToUnstructuredProcessor.processInboundToUnstructured();
 
         // then
-        verify(singleElementProcessor, times(2)).processSingleElement(any(), any(), any());
+        verify(singleElementProcessor, times(2)).processSingleElement(any());
     }
 
 }
